[gd_scene load_steps=7 format=2]

[ext_resource path="res://tests/debug_menu.gd" type="Script" id=1]
[ext_resource path="res://tests/debug_partydisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://tests/debug_dgem.tscn" type="PackedScene" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Panel
var C = null

func _ready():
	pass

func init(ch):
	C = ch
	$Label.text = C.name

func _on_Repair_pressed() -> void:
	C.fullRepair()
"

[sub_resource type="GDScript" id=2]
script/source = "extends Panel
var C = null
var connected : bool = false

func init(ch, parent) -> void:
	C = ch
	$Label.text = \"Equipment for %s\" % C.name
	for i in C.equip.WEAPON_SLOT:
		var N = get_node(\"DGem%1d\" % i)
		N.init(C.equip.slot[i])
		if not connected: N.connect(\"openMenu\", parent, \"_on_DGem_select\")
	connected = true

func close(parent) -> void:
	if not connected: return
	for i in C.equip.WEAPON_SLOT:
		var N = get_node(\"DGem%1d\" % i)
		N.disconnect(\"openMenu\", parent, \"_on_DGem_select\")
"

[sub_resource type="GDScript" id=3]
script/source = "extends Panel
var guild = null
var buttons = []
var parent = null

func init(Gu, slot, WP, parent_):
	guild = Gu.group
	parent = parent_
	$Label.text = \"Please select gem to equip on slot %1d of %s\" % [slot, WP.lib.name]
	if WP.DGem.slot[slot] != null:
		$DGemRemove.text = \"Remove %s%s LV%1d\" % [WP.DGem.slot[slot].getUnicodeIcon(), WP.DGem.slot[slot].lib.name, WP.DGem.slot[slot].level]
		print($DGemRemove.connect(\"pressed\", parent, \"_on_DGemRemove_pressed\", [WP, slot]))
		$DGemRemove.show()
	else:
		$DGemRemove.hide()
	for i in range(guild.dragonGems.size()):
		var G = guild.dragonGems[i]
		if G != null:
			var button = Button.new()
			button.text = \"%s%s LV%1d\" % [G.getUnicodeIcon(), G.lib.name, G.level]
			button.hint_tooltip = \"%s\\n%s\" % [button.text, G.lib.desc]
			button.flat = true
			button.align = Button.ALIGN_LEFT
			button.connect(\"pressed\", parent, \"_on_DGem_selected\", [G, i, WP, slot])
			buttons.push_front(button)
			$ScrollContainer/VBoxContainer.add_child(button)

func close():
	for i in buttons:
		i.queue_free()
	buttons = []
	if $DGemRemove.is_connected(\"pressed\", parent, \"_on_DGemRemove_pressed\"):
		$DGemRemove.disconnect(\"pressed\", parent, \"_on_DGemRemove_pressed\")
	parent = null
	hide()"

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 720.0

[node name="Button" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 90.0
margin_right = 450.0
margin_bottom = 110.0
text = "Battle Test 01"

[node name="Button5" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 120.0
margin_right = 450.0
margin_bottom = 140.0
text = "Battle Test 02"

[node name="Button6" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 150.0
margin_right = 450.0
margin_bottom = 170.0
text = "Random battles"

[node name="Button2" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 180.0
margin_right = 450.0
margin_bottom = 200.0
disabled = true
text = "Battle Test Boss"

[node name="Button3" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 210.0
margin_right = 450.0
margin_bottom = 230.0
disabled = true
text = "Party Creator"

[node name="Button4" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 240.0
margin_right = 450.0
margin_bottom = 260.0
disabled = true
text = "Character Creator"

[node name="Label" type="Label" parent="Panel"]
margin_right = 480.0
margin_bottom = 50.0
text = "Vault City Raiders Debug Menu"
align = 1
valign = 1

[node name="LoadDebugParty" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 80.0
text = "Load debug party"

[node name="Panel2" type="Panel" parent="."]
margin_left = 490.0
margin_top = 70.0
margin_right = 960.0
margin_bottom = 380.0

[node name="Guild" type="Label" parent="Panel2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 30.0
text = "XXXXXXXXXXXXXXX"
align = 1
valign = 1

[node name="Funds" type="Label" parent="Panel2"]
margin_left = 20.0
margin_top = 40.0
margin_right = 270.0
margin_bottom = 60.0
text = "Funds:"
valign = 1

[node name="Time" type="Label" parent="Panel2"]
margin_left = 280.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 60.0
text = "Time:"
valign = 1

[node name="Wins" type="Label" parent="Panel2"]
margin_left = 20.0
margin_top = 60.0
margin_right = 250.0
margin_bottom = 80.0
text = "Wins"
valign = 1

[node name="Loses" type="Label" parent="Panel2"]
margin_left = 280.0
margin_top = 60.0
margin_right = 510.0
margin_bottom = 80.0
text = "Loses"
valign = 1

[node name="Heal" type="Button" parent="Panel2"]
margin_left = 10.0
margin_top = 150.0
margin_right = 460.0
margin_bottom = 170.0
text = "Rest party"

[node name="ELVLabel" type="Label" parent="Panel2"]
margin_left = 10.0
margin_top = 250.0
margin_right = 100.0
margin_bottom = 270.0
text = "Enemy LV"
valign = 1

[node name="ELVSlider" type="HSlider" parent="Panel2"]
margin_left = 110.0
margin_top = 250.0
margin_right = 390.0
margin_bottom = 270.0
min_value = -100.0
rounded = true
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="ELV" type="Label" parent="Panel2"]
margin_left = 400.0
margin_top = 250.0
margin_right = 460.0
margin_bottom = 270.0
text = "LV"
valign = 1

[node name="RankLabel" type="Label" parent="Panel2"]
margin_left = 10.0
margin_top = 280.0
margin_right = 100.0
margin_bottom = 300.0
text = "Rank adjust"
valign = 1

[node name="RankSlider" type="HSlider" parent="Panel2"]
margin_left = 110.0
margin_top = 280.0
margin_right = 390.0
margin_bottom = 300.0
max_value = 1.07374e+09
rounded = true
scrollable = false
tick_count = 2
ticks_on_borders = true

[node name="Rank" type="Label" parent="Panel2"]
margin_left = 400.0
margin_top = 280.0
margin_right = 460.0
margin_bottom = 300.0
text = "RANK"
valign = 1

[node name="PartyDisplay" parent="Panel2" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 90.0
margin_right = 460.0
margin_bottom = 140.0

[node name="Panel3" type="Panel" parent="."]
margin_left = 490.0
margin_right = 960.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Panel3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 30.0
text = "Random Seed"
align = 1
valign = 1

[node name="Seed" type="Label" parent="Panel3"]
margin_left = 10.0
margin_top = 30.0
margin_right = 460.0
margin_bottom = 60.0
text = "Seed"
align = 1
valign = 1

[node name="Panel4" type="Panel" parent="." groups=[
"CharMenus",
]]
margin_left = 490.0
margin_top = 390.0
margin_right = 960.0
margin_bottom = 720.0
script = SubResource( 1 )

[node name="Label" type="Label" parent="Panel4"]
margin_right = 470.0
margin_bottom = 30.0
text = "Character Name"
align = 1
valign = 1

[node name="Heal" type="Button" parent="Panel4"]
margin_left = 10.0
margin_top = 30.0
margin_right = 460.0
margin_bottom = 50.0
text = "Full Heal"

[node name="Repair" type="Button" parent="Panel4"]
margin_left = 10.0
margin_top = 60.0
margin_right = 460.0
margin_bottom = 82.0
text = "Full Repair"

[node name="DGem" type="Button" parent="Panel4"]
margin_left = 12.0
margin_top = 90.0
margin_right = 460.0
margin_bottom = 112.0
text = "Set Dragon Gems"

[node name="Panel5" type="Panel" parent="." groups=[
"CharMenus",
]]
visible = false
margin_left = 490.0
margin_top = 390.0
margin_right = 960.0
margin_bottom = 720.0
script = SubResource( 2 )

[node name="Label" type="Label" parent="Panel5"]
margin_right = 470.0
margin_bottom = 30.0
text = "Lorem Ipsum"
align = 1
valign = 1

[node name="DGem0" parent="Panel5" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 80.0

[node name="DGem1" parent="Panel5" instance=ExtResource( 3 )]
margin_top = 80.0
margin_bottom = 130.0

[node name="DGem2" parent="Panel5" instance=ExtResource( 3 )]
margin_top = 130.0
margin_bottom = 180.0

[node name="DGem3" parent="Panel5" instance=ExtResource( 3 )]
margin_top = 180.0
margin_bottom = 230.0

[node name="Panel6" type="Panel" parent="." groups=[
"CharMenus",
]]
visible = false
margin_left = 490.0
margin_top = 390.0
margin_right = 960.0
margin_bottom = 720.0
script = SubResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel6"]
margin_left = 12.0
margin_top = 60.0
margin_right = 460.0
margin_bottom = 320.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel6/ScrollContainer"]

[node name="Label" type="Label" parent="Panel6"]
margin_right = 470.0
margin_bottom = 20.0
text = "Lorem Ipsum"
align = 1
valign = 1

[node name="DGemCancel" type="Button" parent="Panel6"]
margin_left = 10.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 40.0
text = "Cancel"

[node name="DGemRemove" type="Button" parent="Panel6"]
margin_left = 10.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 60.0
text = "Remove"
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Panel/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Panel/LoadDebugParty" to="." method="_on_LoadDebugParty_pressed"]
[connection signal="pressed" from="Panel2/Heal" to="." method="_on_Heal_pressed"]
[connection signal="value_changed" from="Panel2/ELVSlider" to="." method="_on_ELVSlider_value_changed"]
[connection signal="value_changed" from="Panel2/RankSlider" to="." method="_on_RankSlider_value_changed"]
[connection signal="pressed" from="Panel4/Repair" to="Panel4" method="_on_Repair_pressed"]
[connection signal="pressed" from="Panel4/DGem" to="." method="_on_DGem_pressed"]
[connection signal="pressed" from="Panel6/DGemCancel" to="." method="_on_DGemCancel_pressed"]
